--- a/public/index.html
+++ b/public/index.html
@@ -100,11 +100,20 @@
 
     <!-- Talk template -->
     <script type="text/template" id="talkTemplate">
-      <div class="col-sm-3 col-sm-offset-1 panel panel-default">
-        <h3 class="text-center">
-          <%= user.get("pseudo") %>
-        </h3>
+
+      <div class="col-sm-3 col-sm-offset-1">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title text-center">
+              <%= user.get("pseudo") %>
+            </h3>
+          </div>
+          <div class="panel-body">
+            <p class="text-center"><%= user.get("id") %></p>
+          </div>
+        </div>
       </div>
+
       <div class="col-sm-7">
         <textarea id="message_input" placeholder="Send a message..." class="form-control"></textarea>
         <button id="send_message" type="button" class="btn btn-success">Hide and send</button>
