move router code to view (about sub views)

--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
             <p class="text-center">Id: <b>{{user.id}}</b></p>
           </div>
         </div>
-        <button type="button" class="btn btn-block btn-success">Back</button>
+        <button type="button" id="back_button" class="btn btn-block btn-success">Back</button>
       </div>
 
       <div class="col-sm-7">
@@ -154,12 +154,9 @@
           <button id="send_message" type="button" class="btn btn-success">Hide and send</button>
         </div>
 
-        <div id="talkMessageList">
+        <div id="messageList">
         </div>
       </div>
-    </script>
-
-    <script type="text/template" id="talkMessageListTemplate">
     </script>
 
 	</head>
