add date support

--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
             {{^user_pseudo}}
               Unknown
             {{/user_pseudo}}
-            To 
+            to 
             {{#destination_pseudo}}
               <a href="#user/{{this}}">
                 {{this}}
@@ -146,6 +146,8 @@
             {{^destination_pseudo}}
               Unknown
             {{/destination_pseudo}}
+            at
+            {{createdAt}}
           </div>
           <div class="panel-body">
             {{hidden_content}}
