--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
         <ul class="list-group">
           {{#each users}}
             <li class="text-center list-group-item">
-              <a href="#user/{{pseudo}}">
+              <a href="#user/{{id}}">
                 {{pseudo}}
               </a>
               <span class="badge">0</span>
