--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 	<head>
     <meta charset="utf8">
+    <title>Safebook</title>
 
     <!-- CSS files -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
