--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
             <p class="text-center">Id: <b>{{page.id}}</b></p>
           </div>
         </div>
-        <div id="pageUserList">
+        <div id="pageLinkList">
         </div>
         <button type="button" id="back_button" class="btn btn-block btn-success">Back</button>
       </div>
@@ -215,7 +215,7 @@
     </script>
 
     <!-- PageUserList template -->
-    <script type="text/template" id="pageUserListTemplate">
+    <script type="text/template" id="pageLinkListTemplate">
       <div class="panel panel-success">
         <div class="panel-heading text-center">
           Page Users
