--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,12 @@
               <a href="#page/{{id}}">
                 {{name}}
               </a>
+              (
+              <a href="#user/{{user_id}}">
+                {{user_name}}
+              </a>
+              )
+              <span class="badge">0</span>
             </li>
           {{/each}}
           <li class="list-group-item">
