rename 'user' to by 'talk' nav

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
     <!-- User list template -->
     <script type="text/template" id="userListTemplate">
       <div class="panel panel-success">
-        <div class="panel-heading text-center">Users</div>
+        <div class="panel-heading text-center">Talks</div>
         <ul class="list-group">
           {{#each users}}
             <li class="text-center list-group-item">
