use crypto for user talks

--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
             {{createdAt}}
           </div>
           <div class="panel-body">
-            {{hidden_content}}
+            {{content}}
           </div>
         </div>
       {{/each}}
