--- a/public/index.html
+++ b/public/index.html
@@ -92,9 +92,7 @@
         <ul class="list-group">
           {{#each users}}
             <li class="text-center list-group-item">
-              <a href="#user/{{id}}">
-                {{pseudo}}
-              </a>
+              <a href="#user/{{id}}">{{pseudo}}</a>
               <span class="badge">0</span>
             </li>
           {{/each}}
