improve page tests

--- a/public/index.html
+++ b/public/index.html
@@ -235,13 +235,9 @@
                   (Creator)
                 {{else}}
                   {{#if auth}}
-                    <a class="delete" data-id="{{id}}" href="#">
-                      (Remove)
-                    </a>
+                    <a class="delete" data-id="{{id}}" href="#">(Remove)</a>
                   {{else}}
-                    <a class="create" data-id="{{id}}" href="#">
-                      (Add)
-                    </a>
+                    <a class="create" data-id="{{id}}" href="#">(Add)</a>
                   {{/if}}
                 {{/if}}
               </div>
