--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
             You can use any file (picture, document, ...) but <b>make sure that you are the only owner of this file</b>
           </p>
         </div>
+        <div class="form-group">
+          <input type="checkbox" id="remember_input"></input>
+          <span>Remember me</span>
+        </div>
         <div class="col-sm-6">
           <button type="submit" id="signin" class="btn btn-block btn-success">Sign In</button>
         </div>
