--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/underscore.js"></script>
     <script type="text/javascript" src="js/backbone.js"></script>
     <script type="text/javascript" src="js/sjcl.js"></script>
+    <script type="text/javascript" src="js/socket.io.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 
     <!-- Login template -->
