remember me working

--- a/public/index.html
+++ b/public/index.html
@@ -261,8 +261,11 @@
           <img src="logo.png" class="col-sm-offset-1" style="margin-bottom: 10px; margin-top: 10px">
         </a>
       </div>
-      <div class="col-sm-8">
+      <div class="col-sm-6">
         <h1>This is the header !</h1>
+      </div>
+      <div class="col-sm-2">
+        <a href="#logout"><h2>Logout</h2></a>
       </div>
     </div>
 
